# loadout

./: .dockerignore  .gitignore  Cargo.toml  README.md  install.ps1  install.sh  loadout  loadout.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  dev-release.yml  release.yml
backends/: apt.sh  brew.sh  mise.ps1  mise.sh  npm.ps1  npm.sh  scoop.ps1  uv.ps1  uv.sh  winget.ps1
cmd/: apply.ps1  apply.sh  migrate.ps1  migrate.sh  plan.ps1  plan.sh
core/lib/: backend_registry.ps1  backend_registry.sh  compiler.ps1  compiler.sh  declarative_executor.ps1  declarative_executor.sh  env.ps1  env.sh  executor.ps1  executor.sh  feature_index.ps1  feature_index.sh  fs.ps1  fs.sh  logger.ps1  logger.sh  orchestrator.ps1  orchestrator.sh  planner.ps1  planner.sh  policy_resolver.ps1  policy_resolver.sh  repo.ps1  repo.sh  resolver.ps1  resolver.sh  runner.ps1  runner.sh  source_registry.ps1  source_registry.sh  state.ps1  state.sh
crates/app/: Cargo.toml
crates/app/src/: activate.rs  apply.rs  context.rs  lib.rs  materializer.rs  mutate.rs  pipeline.rs  plan.rs  read.rs  scaffold.rs  tests.rs  validate.rs
crates/backend-host/: Cargo.toml
crates/backend-host/src/: lib.rs
crates/backends-builtin/: Cargo.toml
crates/backends-builtin/src/: apt.rs  brew.rs  cmd.rs  lib.rs  mise.rs  npm.rs  scoop.rs  uv.rs  winget.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  context.rs  main.rs
crates/cli/src/cmd/: activate.rs  apply.rs  backend.rs  completions.rs  component.rs  config.rs  context.rs  doctor.rs  editor.rs  feature.rs  migrate.rs  mod.rs  plan.rs  source.rs  state.rs
crates/cli/src/cmd/backend/: list.rs  mod.rs  show.rs
crates/cli/src/cmd/config/: list.rs  mod.rs  show.rs
crates/cli/src/cmd/context/: mod.rs  set.rs  show.rs  unset.rs
crates/cli/src/cmd/feature/: list.rs  mod.rs  show.rs
crates/cli/src/cmd/source/: list.rs  mod.rs  show.rs
crates/cli/src/cmd/state/: migrate.rs  mod.rs  show.rs
crates/cli/src/output/: mod.rs  plan.rs  report.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/component-host/: Cargo.toml
crates/component-host/src/: lib.rs
crates/component-index/: Cargo.toml
crates/component-index/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  write.rs
crates/executor/: Cargo.toml
crates/executor/src/: activate.rs  lib.rs  tool_verify.rs
crates/feature-host/: Cargo.toml
crates/feature-host/src/: lib.rs
crates/feature-index/: Cargo.toml
crates/feature-index/src/: lib.rs
crates/for-each-expander/: Cargo.toml
crates/for-each-expander/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: component_index.rs  desired_resource_graph.rs  env.rs  error.rs  feature_index.rs  fs.rs  id.rs  lib.rs  params.rs  plan.rs  policy.rs  profile.rs  sources.rs  state.rs  strategy.rs  tool.rs
crates/params-materializer/: Cargo.toml
crates/params-materializer/src/: lib.rs
crates/params-validator/: Cargo.toml
crates/params-validator/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/source-registry/: Cargo.toml
crates/source-registry/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
docs/: README.md
docs/architecture/: README.md  boundaries.md  layers.md  principles.md
docs/development/: README.md  direction.md  documentation.md  testing.md
docs/guides/: README.md  backends.md  commands.md  components.md  features.md  usage.md
docs/specs/: README.md
docs/specs/algorithms/: planner.md  resolver.md
docs/specs/api/: backend.md  component-host.md  feature-host.md
docs/specs/data/: component_index.md  desired_resource_graph.md  feature_index.md  policy.md  profile.md  sources.md  state.md  strategy.md
features/brew/: feature.yaml  install.sh  uninstall.sh
features/caps2ctrl/: feature.yaml  install.ps1  uninstall.ps1
features/caps2ctrl/files/: Caps2Ctrl.reg
features/cli-tools/: feature.linux.yaml  feature.windows.yaml  feature.yaml
features/fzf/: feature.yaml
features/mise/: feature.linux.yaml  feature.windows.yaml  feature.yaml
features/node/: feature.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
features/npm/: feature.yaml  install.sh  uninstall.sh
features/python/: feature.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
features/ripgrep/: feature.yaml
features/rust/: feature.yaml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
features/scoop/: feature.yaml  install.ps1  uninstall.ps1
features/test-declarative/: feature.yaml
features/test-declarative/files/: marker
features/uv/: feature.yaml  install.sh  uninstall.sh
features/vcredist/: feature.yaml  install.ps1  uninstall.ps1
tests/e2e/: README.md
tests/e2e/linux/docker/: Dockerfile  README.md  test.sh
tests/e2e/windows/: README.md
tests/e2e/windows/sandbox/: create-wsb.ps1  (+2 more)
tests/environment/: README.md
tests/environment/windows/: README.md
tests/fixtures/configs/: config-base.yaml  config-empty.yaml  config-for-each-v18-v22.yaml  config-for-each-v22.yaml  config-full.yaml  config-import-cycle-a.yaml  config-import-cycle-b.yaml  config-import-merge-order.yaml  config-import-single.yaml  config-linux.yaml  config-params-default.yaml  config-params-invalid.yaml  config-pkg-version-v1.yaml  config-pkg-version-v2.yaml  config-tool.yaml  config-version-mixed.yaml  config-version-v20.yaml  config-version-v22.yaml  config-windows.yaml  import-bundle-base.yaml  import-bundle-extra.yaml  linux.yaml  windows.yaml
tests/runtime/: Cargo.toml
tests/runtime/src/: assert.rs  context.rs  main.rs  runner.rs
tests/unit/: helpers.ps1  helpers.sh  test_compiler.ps1  test_compiler.sh  test_declarative_executor.ps1  test_declarative_executor.sh  test_feature_index.ps1  test_feature_index.sh  test_planner.ps1  test_planner.sh  test_policy_resolver.sh  test_resolver.ps1  test_resolver.sh  test_source_registry.sh
(+91 files in other folders)
