[workspace]
members = [
    "crates/cli",
    "crates/model",
    "crates/resolver",
    "crates/planner",
    "crates/io",
    "crates/config",
    "crates/state",
    "crates/source-registry",
    "crates/component-index",
    "crates/compiler",
    "crates/platform",
    "crates/backend-host",
    "crates/component-host",
    "crates/executor",
    "crates/backends-builtin",
    "crates/app",
    "crates/params-validator",
    "crates/params-materializer",
    # Test infrastructure (not part of the loadout product binary)
    "tests/runtime",
]
resolver = "2"
