[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
model        = { path = "../model" }
config       = { path = "../config" }
source-registry = { path = "../source-registry" }
component-index = { path = "../component-index" }
compiler     = { path = "../compiler" }
params-validator    = { path = "../params-validator" }
params-materializer = { path = "../params-materializer" }
for-each-expander   = { path = "../for-each-expander" }
resolver     = { path = "../resolver" }
planner      = { path = "../planner" }
executor     = { path = "../executor" }
state        = { path = "../state" }
platform     = { path = "../platform" }
backend-host     = { path = "../backend-host" }
backends-builtin = { path = "../backends-builtin" }
thiserror    = "2"
sha2         = "0.10"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

[dev-dependencies]
tempfile = "3"
