[package]
name = "loadout"
version = "0.1.0"
edition = "2021"
description = "A declarative environment management tool"
license = "MIT"
repository = "https://github.com/massa-kj/loadout"
keywords = ["dotfiles", "environment", "declarative", "cli"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "loadout"
path = "src/main.rs"

[dependencies]
app           = { path = "../app" }
state         = { path = "../state" }
model         = { path = "../model" }
platform      = { path = "../platform" }
config        = { path = "../config" }
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
