[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
state = { path = "../state" }
backend-host = { path = "../backend-host" }
component-host = { path = "../component-host" }
platform = { path = "../platform" }
thiserror = "2"
semver = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3"
